# tailscale-blade-mcp

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  sidereal-plugin.yaml  stallari-plugin.yaml
src/tailscale_blade_mcp/: __init__.py  __main__.py  auth.py  client.py  formatters.py  models.py  server.py
tests/: conftest.py  test_client.py  test_formatters.py  test_models.py
