[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tailscale-blade-mcp"
version = "0.1.1"
description = "MCP server for Tailscale network monitoring and security — devices, ACLs, DNS, keys, users, audit logs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "groupthink-dev" }]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
tailscale-blade-mcp = "tailscale_blade_mcp.server:main"

[dependency-groups]
dev = ["ruff>=0.4.0", "mypy>=1.10.0", "pre-commit>=3.0.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-mock>=3.14.0", "pytest-cov>=5.0.0", "respx>=0.22.0"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "PLW"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["e2e: requires live Tailscale API access"]
